--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "parcel": "^2.0.0-nightly.1234",
+    "parcel": "^2.8.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
