--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "autoprefixer": "^10.4.13",
     "parcel": "^2.8.2",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4"
   }
 }
