--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "license": "MIT",
-  "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "parcel": "^2.8.3",
-    "postcss": "^8.4.23",
-    "posthtml-expressions": "^1.11.0",
-    "posthtml-include": "^1.7.4",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "tailwindcss": "^3.3.2"
-  }
+    "license": "MIT",
+    "scripts": {
+        "dev": "parcel src/index.html",
+        "build": "parcel build src/index.html"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.14",
+        "parcel": "^2.8.3",
+        "postcss": "^8.4.23",
+        "posthtml-expressions": "^1.11.0",
+        "posthtml-include": "^1.7.4",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.2.8",
+        "simplelightbox": "^2.14.1",
+        "tailwindcss": "^3.3.2"
+    }
 }
