--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.14",
+        "gh-pages": "^5.0.0",
         "parcel": "^2.8.3",
         "postcss": "^8.4.23",
         "posthtml-expressions": "^1.11.0",
