--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "dev": "parcel src/index.html",
         "build": "parcel build src/index.html",
         "predeploy": "rm -rf dist && parcel build ./*.html --public-url https://cptswing.github.io/brotherland",
-        "deploy": "dist -d dist"
+        "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.14",
