--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "scripts": {
         "dev": "parcel src/index.html",
         "build": "parcel build src/index.html",
-        "predeploy": "rm -rf dist && git checkout gh-pages && git merge main && parcel build src/index.html --public-url https://cptswing.github.io/brotherland",
+        "predeploy": "rm -rf dist && parcel build src/index.html --public-url https://cptswing.github.io/brotherland",
+
+        // "predeploy": "git checkout gh-pages && git merge main && rm -rf dist && parcel build src/index.html --public-url https://cptswing.github.io/brotherland",
         "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
