--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "posthtml-include": "^1.7.4",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.2.8",
+        "sharp": "^0.31.1",
         "simplelightbox": "^2.14.1",
         "tailwindcss": "^3.3.2"
     }
