--- a/.parcelrc
+++ b/.parcelrc
@@ -1,4 +1,7 @@
 {
-  "extends": "@parcel/config-default",
-  "namers": [ "parcel-namer-hashless" ]
+    "extends": "@parcel/config-default",
+    "resolvers": [
+        "parcel-resolver-ignore",
+        "..."
+    ]
 }
