--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
         "predeploy": "rm -rf dist && parcel build src/index.html --public-url https://cptswing.github.io/brotherland",
         "deploy": "gh-pages -d dist"
     },
+    "parcelIgnore": [],
     "devDependencies": {
         "autoprefixer": "^10.4.14",
         "gh-pages": "^5.0.0",
         "parcel": "^2.8.3",
-        "parcel-namer-hashless": "^1.0.5",
+        "parcel-resolver-ignore": "^2.1.5",
         "postcss": "^8.4.23",
         "posthtml-expressions": "^1.11.0",
         "posthtml-include": "^1.7.4",
