--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "homepage": "https://cptswing.github.io/brotherland/",
+    "homepage": "https://www.brotherland.info/",
     "license": "MIT",
     "scripts": {
         "dev": "parcel src/index.html",
         "build": "parcel build src/index.html",
-        "predeploy": "rm -rf dist && parcel build src/index.html --public-url https://cptswing.github.io/brotherland",
+        "predeploy": "rm -rf dist && parcel build src/index.html --public-url https://www.brotherland.info",
         "deploy": "gh-pages -d dist"
     },
     "parcelIgnore": [],
