--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "parcel src/index.html",
         "build": "parcel build src/index.html",
-        "predeploy": "rm -rf dist && parcel build src/index.html --public-url https://www.brotherland.info",
+        "predeploy": "rm -rf dist && parcel build src/index.html --public-url https://www.brotherland.info && cp CNAME ./dist",
         "deploy": "gh-pages -d dist"
     },
     "parcelIgnore": [],
