--- a/.parcelrc
+++ b/.parcelrc
@@ -1,7 +1,8 @@
 {
     "extends": "@parcel/config-default",
-    "resolvers": [
-        "parcel-resolver-ignore",
-        "..."
-    ]
+    "transformers": {
+        "virtAusstCursor*.png": [
+            "@parcel/transformer-raw"
+        ]
+    }
 }
