--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "homepage": "https://www.brotherland.info/",
     "license": "MIT",
     "scripts": {
-        "dev": "parcel src/index.html public/images/virtAusstCursor.png public/images/virtAusstCursor_EN.png public/images/virtAusstCursor_prev.png public/images/virtAusstCursor_prev_EN.png public/images/virtAusstCursor_next.png public/images/virtAusstCursor_next_EN.png",
-        "build": "parcel build src/index.html public/images/virtAusstCursor.png public/images/virtAusstCursor_EN.png public/images/virtAusstCursor_prev.png public/images/virtAusstCursor_prev_EN.png public/images/virtAusstCursor_next.png public/images/virtAusstCursor_next_EN.png",
+        "dev": "parcel src/index.html",
+        "build": "parcel build src/index.html",
         "predeploy": "rm -rf dist && parcel build src/index.html --public-url https://www.brotherland.info && cp CNAME ./dist",
         "deploy": "gh-pages -d dist"
     },
